--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/joyce-lam/liri/issues"
   },
-  "homepage": "https://github.com/joyce-lam/liri#readme"
+  "homepage": "https://github.com/joyce-lam/liri#readme",
+  "dependencies": {
+    "dotenv": "^5.0.0",
+    "node-spotify-api": "^1.0.7",
+    "request": "^2.83.0",
+    "twitter": "^1.7.1"
+  }
 }
